--- a/style.css
+++ b/style.css
@@ -889,6 +889,40 @@ footer .copyright p {
     }
 }
 
+@media (max-width:460px){
+    .section-p1 {
+        padding: 20px;
+    }
+    #header {
+        padding: 10px 30px;
+    }
+    h1 {
+        font-size: 38px;
+    }
+    h2 { font-size: 32px;
+    }
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    #feature { 
+        justify-content: space-between;
+    }
+    #feature .fe-box{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #product1 .pro {
+        width: 100%;
+    }
+    #banner {
+        height: 40vh;
+    }
+    .logo { 
+        width: 100%;
+    }
+}
+
 
 /* ===========================================
    CSS PAGE BLOG.HTML – STYLE PREMIUM HORIZONS BLANC
@@ -1114,4 +1148,9 @@ footer .copyright p {
     #blog-hero h2 {
         font-size: 18px;
     }
+}
+
+
+.imgAbout { 
+    flex: 1 1 350px
 }
