--- a/style.css
+++ b/style.css
@@ -920,6 +920,9 @@ footer .copyright p {
     }
     .logo { 
         width: 100%;
+         max-width: 350px;
+         justify-content: center;
+         align-items: center;
     }
 }
 
