--- a/style.css
+++ b/style.css
@@ -912,7 +912,7 @@ footer .copyright p {
         width: 155px;
         margin: 0 0 15px 0;
     }
-    #product1 .pro {
+    #produit1 .pro {
         width: 100%;
     }
     #banner {
