--- a/style.css
+++ b/style.css
@@ -847,7 +847,10 @@ footer .copyright p {
 
 /* PETITS TÉLÉPHONES (≤ 480px) */
 @media (max-width: 480px) {
-    .logo { width: 100%;}
+    .logo { 
+        width: 70%;
+
+    }
 
     h1 { font-size: 32px; }
     h2 { font-size: 26px; }
