--- a/style.css
+++ b/style.css
@@ -847,6 +847,20 @@ footer .copyright p {
 
 /* PETITS TÉLÉPHONES (≤ 480px) */
 @media (max-width: 480px) {
+        #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 250px;
+        background-color: white;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.2);
+        padding: 80px 0 0 10px;
+        transition: 0.4s ease;
+    }
     .logo { 
         width: 70%;
 
