--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ button.normal {
 #sm-banner .banner-box1,
 #sm-banner .banner-box2 {
     flex: 1 1 400px;
-    height: 420px;
+    height: 700px;
     border-radius: 12px;
     padding: 30px;
     display: flex;
@@ -903,7 +903,7 @@ footer .copyright p {
 
     #sm-banner .banner-box1,
     #sm-banner .banner-box2 {
-        height: 340px;
+        height: 500px;
         padding: 24px;
     }
 
@@ -1011,7 +1011,7 @@ footer .copyright p {
     #sm-banner .banner-box2 {
         flex: 1 1 100%;
         width: 100%;
-        height: 700px;
+        height: 100%;
         padding: 20px;
     }
 
@@ -1127,7 +1127,7 @@ footer .copyright p {
 
     #sm-banner .banner-box1,
     #sm-banner .banner-box2 {
-        height: 50vh;
+        height: 800px;
         width: 100%;
         padding: 20px;
     }
