--- a/style.css
+++ b/style.css
@@ -1171,8 +1171,13 @@ footer .copyright p {
         max-width: 160px;
     }
 
-    h1 { font-size: 28px; }
-    h2 { font-size: 24px; }
+    h1 {
+         font-size: 28px;
+         }
+
+    h2 { 
+        font-size: 24px; 
+    }
 
     #hero {
         padding: 0 20px;
@@ -1198,12 +1203,8 @@ footer .copyright p {
 
     #sm-banner .banner-box1,
     #sm-banner .banner-box2 {
-        height: 80vh;
+        height: 100%;
         width: 100%;
     }
-     #sm-banner .banner-box1 img,
-    #sm-banner .banner-box2 img {
-        height: 80vh;
-        width: 100%;
-    }
+
 }
