--- a/style.css
+++ b/style.css
@@ -1004,12 +1004,12 @@ footer .copyright p {
     /* SM-BANNER */
     #sm-banner {
         flex-direction: column;
-        gap: 30px;
+        gap: 50px;
     }
 
     #sm-banner .banner-box1,
     #sm-banner .banner-box2 {
-        flex: 1 1 100%;
+        /* flex: 1 1 100%; */
         width: 100%;
         height: 100%;
         padding: 20px;
@@ -1161,7 +1161,7 @@ footer .copyright p {
 }
 
 /* TÉLÉPHONES TRÈS ÉTROITS (≤ 460px) */
-@media (max-width: 390px) {
+@media (max-width: 460px) {
 
     #header {
         padding: 8px 12px;
