--- a/style.css
+++ b/style.css
@@ -1009,7 +1009,7 @@ footer .copyright p {
 
     #sm-banner .banner-box1,
     #sm-banner .banner-box2 {
-        /* flex: 1 1 100%; */
+        flex: 1 1 100%;
         width: 100%;
         height: 100%;
         padding: 20px;
