--- a/style.css
+++ b/style.css
@@ -933,7 +933,7 @@ footer .copyright p {
     }
 
     /* Navbar devient panneau latéral */
-    #navbar {
+    /* #navbar {
         position: fixed;
         top: 0;
         right: -260px;
@@ -945,7 +945,21 @@ footer .copyright p {
         padding: 80px 20px 20px 20px;
         box-shadow: -5px 0 15px rgba(0,0,0,0.1);
         z-index: 998;
-    }
+    } */
+
+    #navbar {
+    position: fixed;
+    top: 0;
+    right: -260px;
+    height: 100vh;
+    width: 260px;
+    background-color: white;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px; /* au lieu de 80px 20px 20px 20px */
+    box-shadow: -5px 0 15px rgba(0,0,0,0.1);
+    z-index: 998;
+}
 
     #navbar.active {
         right: 0;
